added layout updates

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,7 +74,9 @@
     @apply bg-background text-foreground;
   }
 }
-
+.maincontent{
+  height: calc(100vh - 64px);
+}
 .columncontainer{
   height: calc(100vh - 300px);
 }
